# nmea_navsat_driver

./: .gitignore  package.xml  setup.py
libnmea_navsat_driver/: driver.py
libnmea_navsat_driver/entry_points/: nmea_serial_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py
