<?xml version="1.0"?>
<package format="2">
  <name>nmea_navsat_driver</name>
  <version>0.5.0</version>
  <description>
	Package to parse NMEA strings and publish a very simple GPS message. Does not require the GPSD deamon.
  </description>

  <maintainer email="evenator@gmail.com">Ed Venator</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/nmea_navsat_driver</url>
  <author email="eric@ericperko.com">Eric Perko</author>
  <author>Steven Martin</author>

  <buildtool_depend>ament</buildtool_depend>
  <build_depend>roslint</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <!-- This is a pure Python package, so mark it architecture independent -->
    <architecture_independent/>
    <build_type>ament_python</build_type>
  </export>
</package>
